// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="pageHeader"
>
  <div
    className="content-container"
  >
    <h1
      className="pageHeader__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.34
      </span>
    </h1>
    <div
      className="pageHeader__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div
  className="pageHeader"
>
  <div
    className="content-container"
  >
    <h1
      className="pageHeader__title"
    >
      Viewing 
      <span>
        112
      </span>
       
      expenses
       totalling 
      <span>
        $872,876.47
      </span>
    </h1>
    <div
      className="pageHeader__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
